--- a/templates/knowledge/list.html
+++ b/templates/knowledge/list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}FAQ & Wissensdatenbank - ML Gruppe Helpdesk{% endblock %}
+{% block title %}FAQ & Wissensdatenbank - {{ app_title }}{% endblock %}
 
 {% block content %}
 <div class="flex justify-between" style="align-items: center; margin-bottom: 20px;">
