--- a/templates/tickets/create.html
+++ b/templates/tickets/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Neues Ticket erstellen - ML Gruppe Helpdesk{% endblock %}
+{% block title %}Neues Ticket erstellen - {{ app_title }}{% endblock %}
 
 {% block content %}
 <div class="card">
