--- a/templates/tickets/detail.html
+++ b/templates/tickets/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ ticket.ticket_number }} - ML Gruppe Helpdesk{% endblock %}
+{% block title %}{{ ticket.ticket_number }} - {{ app_title }}{% endblock %}
 
 {% block content %}
 <!-- Ticket Header -->
