--- a/templates/tickets/escalate.html
+++ b/templates/tickets/escalate.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Ticket eskalieren - ML Gruppe Helpdesk{% endblock %}
+{% block title %}Ticket eskalieren - {{ app_title }}{% endblock %}
 
 {% block content %}
 <div class="card">
