--- a/templates/tickets/list.html
+++ b/templates/tickets/list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Tickets - ML Gruppe Helpdesk{% endblock %}
+{% block title %}Tickets - {{ app_title }}{% endblock %}
 
 {% block content %}
 <style>
