--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Passwort ändern - ML Gruppe Helpdesk{% endblock %}
+{% block title %}Passwort ändern - {{ app_title }}{% endblock %}
 
 {% block content %}
 <div class="card" style="max-width: 500px; margin: 0 auto;">
